--- a/kubernetes-ingress/templates/controller-hpa.yaml
+++ b/kubernetes-ingress/templates/controller-hpa.yaml
@@ -15,7 +15,8 @@ limitations under the License.
 */}}
 
 {{- if and (eq .Values.controller.kind "Deployment") .Values.controller.autoscaling.enabled }}
-apiVersion: autoscaling/v2beta1
+{{- if not .Values.controller.keda.enabled }}
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ template "kubernetes-ingress.fullname" . }}
@@ -49,4 +50,5 @@ spec:
   {{- if .Values.controller.autoscaling.custom }}
   {{- toYaml .Values.controller.autoscaling.custom | nindent 4 }}
   {{- end }}
+{{- end }}
 {{- end }}
