BUG/MINOR: kubernetes-ingress: Fix KEDA pollingInterval typo
Signed-off-by: Dinko Korunic <dkorunic@haproxy.com>

--- a/kubernetes-ingress/templates/controller-keda.yaml
+++ b/kubernetes-ingress/templates/controller-keda.yaml
@@ -32,7 +32,7 @@ metadata:
 spec:
   scaleTargetRef:
     name: {{ template "kubernetes-ingress.fullname" . }}
-  pollingInterval: {{ .Values.contoller.keda.pollingInterval }}
+  pollingInterval: {{ .Values.controller.keda.pollingInterval }}
   cooldownPeriod: {{ .Values.controller.keda.cooldownPeriod }}
   minReplicaCount: {{ .Values.controller.keda.minReplicas }}
   maxReplicaCount: {{ .Values.controller.keda.maxReplicas }}
