BUG/MINOR: kubernetes-ingress: Fixes for HPA autoscaling/v2beta2.
Signed-off-by: Dinko Korunic <dkorunic@haproxy.com>

--- a/kubernetes-ingress/templates/controller-hpa.yaml
+++ b/kubernetes-ingress/templates/controller-hpa.yaml
@@ -39,13 +39,17 @@ spec:
     - type: Resource
       resource:
         name: cpu
-        targetAverageUtilization: {{ .Values.controller.autoscaling.targetCPUUtilizationPercentage }}
+        target:
+          type: Utilization
+          averageUtilization: {{ .Values.controller.autoscaling.targetCPUUtilizationPercentage }}
   {{- end }}
   {{- if .Values.controller.autoscaling.targetMemoryUtilizationPercentage }}
     - type: Resource
       resource:
         name: memory
-        targetAverageUtilization: {{ .Values.controller.autoscaling.targetMemoryUtilizationPercentage }}
+        target:
+          type: Utilization
+          averageUtilization: {{ .Values.controller.autoscaling.targetMemoryUtilizationPercentage }}
   {{- end }}
   {{- if .Values.controller.autoscaling.custom }}
   {{- toYaml .Values.controller.autoscaling.custom | nindent 4 }}
