haproxy: Run as non-root by default
Breaking change - this renames the containerPorts value to ports, and
introduces a mapping between the k8s service and the ports exposed on
the container.  This allows haproxy to run as non-root, but expose ports
<1024 on the service.

--- a/haproxy/templates/daemonset.yaml
+++ b/haproxy/templates/daemonset.yaml
@@ -122,12 +122,12 @@ spec:
           {{- end }}
           {{- end }}
           ports:
-          {{- range $key, $value := .Values.containerPorts }}
+          {{- range $key, $value := .Values.ports }}
             - name: {{ $key }}
-              containerPort: {{ $value }}
+              containerPort: {{ $value.container }}
               protocol: TCP
               {{- if $useHostPort }}
-              hostPort: {{ index $hostPorts $key | default $value }}
+              hostPort: {{ $value.container }}
               {{- end }}
           {{- end }}
           {{- if .Values.livenessProbe.enabled }}
